# PHYS-2150

./: .gitignore  CHANGELOG.md  CLAUDE.md  DOCUMENTATION_UPDATE_SUMMARY.md  Documentation.md  LICENSE  README.md  TROUBLESHOOTING.md  background_light_measurements.csv  defaults.json  distribution.csv  eqe_results.csv  launcher.py  mvc-description.md  phase_adjustment_test.csv  phase_adjustment_test_formatted.csv  phase_lock_info.csv  pyproject.toml  qtwebengine_launcher.py  remote-defaults.json  requirements.txt  temperature_data.csv
app/: CHANGELOG.md  README.md  TROUBLESHOOTING.md  pyproject.toml  requirements.txt
canvas/: canvas_setup_course.py  html_templates.py  requirements.txt
common/: __init__.py
docs/: architecture.md  developer-setup.md  eqe-measurement.md  hardcoded-values-audit.md  hardware-setup.md  jv-measurement.md  lockin-educational-enhancements.md  lockin_validation_handoff.md  mac-testing.md  offline-testing.md  per-suggestions.md  software-lockin.md  staff-guide.md  test-suite-plan.md
eqe/: README.md  STABILITY_TESTING.md  __init__.py  __main__.py  am15-fraction.py  backgroundlight.py  calceqe.py  check_reference.py  combinedeqe.py  combinedeqevolt.py  compare-currents.py  compare_plots.py  cornerstone_mono.py  current_measurements.csv  eqe_results.csv  eqegui.py  eqeguicombined copy.py  eqeguicombined-filters-pyside-pico.py  eqeguicombined-filters-pyside.py  eqeguicombined-filters.py  eqeguicombined-filters.spec  eqeguicombined.py  eqeguicombined.spec  eqelockin.py  eqevolt.py  main.py  picoscope_driver.py  plot_stability.py  power_measurements.csv  power_stability.py  quick_stability_test.py  scratch.ipynb  spectra.py  test_longterm_stability.py  test_picoscope_stability.py  test_stability.py  web_main.py
eqe_mvc/: CORRECTION_FACTOR_ANALYSIS.md  OFFLINE_MODE.md  PICOSCOPE_INTEGRATION.md  README.md  STABILITY_TESTING.md  __init__.py  main.py  (+2 more)
jv/: main.py  (+8 more)
(+380 files in other folders)
