[project]
name = "phys2150"
version = "3.1.0"
description = "PHYS 2150 Measurement Suite - EQE and J-V characterization for solar cells"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "CU Boulder Physics Undergraduate Labs" }
]
keywords = ["physics", "solar cell", "EQE", "J-V", "measurement", "PicoScope"]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "pyside6>=6.5",
    "pyvisa>=1.13",
    "picosdk>=1.0",
    "certifi>=2025.11.12",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-qt>=4.2",
    "ruff>=0.1.0",
]

[project.scripts]
phys2150 = "launcher:main"
phys2150-eqe = "eqe.web_main:main"
phys2150-jv = "jv.web_main:main"

[project.gui-scripts]
phys2150-gui = "launcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["launcher.py", "eqe", "jv", "common"]

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-qt>=4.2",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line length handled separately

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "hardware: marks tests that require actual hardware",
]

[tool.coverage.run]
source = ["jv", "eqe", "common"]
omit = [
    "*/drivers/*",
    "*/__main__.py",
    "*/config/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
